--- a/index.html
+++ b/index.html
@@ -7,13 +7,48 @@
 </head>
 <body>
   <button id="btn_getUserMedia" onclick="getUserMedia_click()">getUserMedia</button>
+  <button id="btn_createOffer" onclick="createOffer_click()">createOffer</button>
   <br>
   <br>
   <video id="localVideo1" autoplay="true"></video>
+  <br>
+  <video id="remoteVideo1" autoplay=true></video>
   <script>
+     var pc1;
+	 var servers = null;
      var localStream = null;
 	 var streamConstraints = { "audio": true, "video": true };
 	 var OfferConstraints = {};
+	function pc1_createOffer_success(desc) {
+        console.log("pc1_createOffer_success(): \ndesc.sdp:\n"+desc.sdp+"desc:", desc);
+        pc1.setLocalDescription(desc);
+	}
+	function pc1_createOffer_error(error){
+         console.log("pc1_createOffer_success_error(): error:", error);
+    }
+	function pc1_onicecandidate(event){
+      if (event.candidate) {
+         console.log("pc1_onicecandidate():\n"+ event.candidate.candidate.replace("\r\n", ""), event.candidate);
+         // Пока вторая сторона не реализована, ничего не делаем
+         // pc2.addIceCandidate(new RTCIceCandidate(event.candidate));
+       }
+    }
+	function pc1_onaddstream(event) {
+         console.log("pc_onaddstream()");
+         remoteVideo1.src = URL.createObjectURL(event.stream);
+    }
+	function createOffer_click() {
+       console.log("createOffer_click()");
+       pc1 = new webkitRTCPeerConnection(servers); // Создаем RTCPeerConnection
+       pc1.onicecandidate = pc1_onicecandidate;    // Callback-функция для обработки ICE-кандидатов
+       pc1.onaddstream = pc1_onaddstream;          // Callback-функция, вызываемая при появлении медиапотока от дальней стороны. Пока что его нет
+       pc1.addStream(localStream); // Передадим локальный медиапоток (предполагаем, что он уже получен)
+       pc1.createOffer(            // И собственно запрашиваем формирование Offer
+       pc1_createOffer_success,
+       pc1_createOffer_error,
+       offerConstraints
+     );
+    }
 	function getUserMedia_success(stream) {
          console.log("getUserMedia_success():", stream);
          localVideo1.src = URL.createObjectURL(stream); // Подключаем медиапоток к HTML-элементу <video>
